--- a/Ivvy.API.csproj
+++ b/Ivvy.API.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="src\Helper\" />
+  </ItemGroup>
+
 </Project>
