--- a/Ivvy.API.csproj
+++ b/Ivvy.API.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <Authors>Ivvy</Authors>
     <OutputType>Library</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netstandard1.3</TargetFramework>
     <Description>Ivvy.API makes it easy to use the iVvy API version 1+ and build extensions on the iVvy platform.</Description>
     <AssemblyTitle>Ivvy.API</AssemblyTitle>
-    <VersionPrefix>0.1.1</VersionPrefix>
+    <VersionPrefix>0.1.2</VersionPrefix>
     <AssemblyName>Ivvy.API</AssemblyName>
     <PackageId>Ivvy.API</PackageId>
     <PackageTags>Ivvy;API</PackageTags>
