--- a/src/Ivvy.API.csproj
+++ b/src/Ivvy.API.csproj
@@ -15,6 +15,8 @@
     <Copyright>Copyright (c) Ivvy Pty Ltd</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <Version>0.78.0-venuedirectory</Version>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
